# trackingApi

./: docker-compose.yml  pyproject.toml  readme.md  test_main.http
ci/: Dockerfile  redis.conf
data/: shipments.csv
src/: main.py
src/api/: router.py
src/api/dependencies/: configuration.py  decorators.py  redis_cache.py
src/api/shipment/: api.py  dependencies.py  selectors.py
src/api/shipment/schemas/: graphql_schema.py  shipment.py
src/api/weather/: api.py  dependencies.py  helpers.py  selectors.py  services.py
src/api/weather/schemas/: weather.py
src/utils/: dependencies.py  logging.py  middlewares.py  pagination.py
tests/: conftest.py  test_redis_cache.py
tests/data/: shipments.csv  shipments_empty.csv  shipments_without_address.csv
tests/test_api/test_shipment/: conftest.py  test_api.py  test_selectors.py
tests/test_api/tests_weather/: conftest.py  test_api.py  test_services.py
